<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/cardcolor">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/user_avatar"
            android:src="@drawable/user1"/>

        <TextView
            android:id="@+id/github_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/user_avatar"
            android:textColor="?attr/textcolor"
            android:textSize="20sp"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@id/user_avatar"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:text="@string/username" />

        <TextView
            android:id="@+id/github_followers"
            android:drawableLeft="@drawable/ic_baseline_person_outline_24"
            android:drawableTint="?attr/iconcolor"
            android:drawablePadding="2dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            android:textColor="?attr/textcolor"
            android:textSize="15sp"
            card_view:layout_constraintStart_toEndOf="@id/user_avatar"
            card_view:layout_constraintTop_toBottomOf="@id/github_username"
            tools:text="@string/user_followers"/>

        <TextView
            android:id="@+id/github_following"
            android:drawableLeft="@drawable/ic_baseline_person"
            android:drawableTint="?attr/iconcolor"
            android:drawablePadding="2dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            android:textColor="?attr/textcolor"
            android:textSize="15sp"
            card_view:layout_constraintStart_toEndOf="@id/github_followers"
            card_view:layout_constraintTop_toBottomOf="@id/github_username"
            tools:text="@string/user_following"/>

        <TextView
            android:id="@+id/github_location"
            android:drawableLeft="@drawable/ic_baseline_location_on_24"
            android:drawableTint="?attr/iconcolor"
            android:drawablePadding="2dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginStart="8dp"
            android:textColor="?attr/textcolor"
            android:textSize="15sp"
            card_view:layout_constraintStart_toEndOf="@id/user_avatar"
            card_view:layout_constraintTop_toBottomOf="@id/github_followers"
            tools:text="@string/user_location"/>

        <TextView
            android:id="@+id/github_company"
            android:drawableLeft="@drawable/ic_baseline_work_24"
            android:drawableTint="?attr/iconcolor"
            android:drawablePadding="2dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            android:textColor="?attr/textcolor"
            android:textSize="15sp"
            card_view:layout_constraintStart_toEndOf="@id/user_avatar"
            card_view:layout_constraintTop_toBottomOf="@id/github_location"
            tools:text="@string/user_company"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>