<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backColor"
    android:orientation="vertical">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/userAvatar"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/userAvatar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        android:src="@drawable/user1" />

    <TextView
        android:id="@+id/fullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userAvatar"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/fullname"
        android:textColor="?attr/textcolor"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/userAvatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fullName"
        app:layout_constraintTop_toBottomOf="@+id/fullName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="15dp"
        android:text="@string/username"
        android:textColor="?attr/textcolor"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/locationName"
        android:drawableLeft="@drawable/ic_baseline_location_on_24"
        android:drawableTint="?attr/iconcolor"
        android:drawablePadding="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/userName"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/user_location"
        android:textSize="15sp"
        android:textColor="?attr/textcolor"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="10dp"/>

    <TextView
        android:id="@+id/companyName"
        android:drawableLeft="@drawable/ic_baseline_work_24"
        android:drawableTint="?attr/iconcolor"
        android:drawablePadding="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_company"
        app:layout_constraintTop_toBottomOf="@id/locationName"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="15sp"
        android:textColor="?attr/textcolor"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="10dp"/>

    <TextView
        android:id="@+id/repository"
        android:drawableLeft="@drawable/ic_baseline_book"
        android:drawableTint="?attr/iconcolor"
        android:drawablePadding="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_repo"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/companyName"
        android:layout_marginTop="5dp"
        android:textColor="?attr/textcolor"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="10dp"/>


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/followTab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="?attr/tabcolor"
        app:layout_constraintTop_toBottomOf="@id/repository"
        app:tabTextColor="@android:color/white"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="400dp"
        android:background="?attr/panecolor"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/favorite_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        app:backgroundTint="?attr/tintcolor"
        android:foregroundTint="?attr/tintcolor"
        android:src="@drawable/ic_baseline_star_border_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
